--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
 
 
 h2 {
-            color: #20B2AA; /* สีน้ำเงินพาสเทล */
+            color: #20B2AA; 
         }
 
 
@@ -50,7 +50,7 @@ h2 {
 
 
 h6 {
-            color: #FF82AB; /* สีน้ำเงินพาสเทล */
+            color: #FF82AB; 
         }
 
 
@@ -59,7 +59,7 @@ h6 {
 
 
 p {
-            color: #019cdf; /* สีน้ำเงินพาสเทล */
+            color: #019cdf; 
         }
 
 
@@ -68,8 +68,8 @@ p {
 
 
 
-h3 {
-            color: #C980DB; /* สีน้ำเงินพาสเทล */
+h1 {
+            color: #C980DB; 
         }
 
 
@@ -78,7 +78,7 @@ h3 {
 
 
 p1 {
-            color: #7F83ED; /* สีน้ำเงินพาสเทล */
+            color: #7F83ED; 
         }
 
 
