--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ h1 {
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
-            font-variation-settings: "wdth" 100;
+            font-variation-settings: "wdth" 
+100;
+		
     }
         
 
@@ -76,9 +78,7 @@ p1 {
             font-weight: 500;
             font-style: normal;
             font-variation-settings:"wdth" 100;
-        
      }
-
 
 
 
@@ -168,7 +168,7 @@ body {
 
 
 
-	.image-container {
+	image-container {
             position: relative;
             display: inline-block;
             cursor: pointer;
@@ -190,7 +190,7 @@ body {
 
 
         footer {
-            background-color: #fff8ce; 
+            background-color: #fff8ce; /* สีชมพูพาสเทล */
             color: #333; /* สีข้อความ */
             text-align: center;
             padding: 20px 0;
@@ -203,7 +203,7 @@ body {
 
         .carousel-item  {
             width: 100%;
-            height: 100%; 
+            height: 100%; /* ตั้งค่าความสูงตามที่ต้องการ */
             overflow: hidden;
             
         }
@@ -214,4 +214,21 @@ body {
             object-fit: cover;
             
         }
+
+        .carousel-item img {
+            
+            padding: 20px; /* เว้นระยะจากขอบทุกด้านเข้าไปข้างใน 20px */
+            margin: auto; /* จัดให้อยู่ตรงกลางหน้าจอ */
+			}
+
+            
         
+        .circle-image {
+            width: 200px; /* กำหนดความกว้างของภาพ */
+            height: 200px; /* กำหนดความสูงของภาพ */
+            border-radius: 50%; /* ทำให้ภาพเป็นวงกลม */
+            object-fit: cover; /* ครอบภาพให้พอดีกับกรอบวงกลม */
+            
+            
+            
+        }
