--- a/style.css
+++ b/style.css
@@ -60,9 +60,7 @@ h1 {
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
-            font-variation-settings: "wdth" 
-100;
-		
+            font-variation-settings: "wdth" 100;
     }
         
 
@@ -222,6 +220,32 @@ body {
 			}
 
             
+        p1 {
+            
+            padding: 10px; /* เว้นระยะจากขอบทุกด้านเข้าไปข้างใน 10px */
+            margin: auto; /* จัดให้อยู่ตรงกลางหน้าจอ */
+
+        }
+
+        p2 {
+            
+            padding: 10px; /* เว้นระยะจากขอบทุกด้านเข้าไปข้างใน 10px */
+            margin: auto; /* จัดให้อยู่ตรงกลางหน้าจอ */
+                
+            } 
+
+        h2 {
+            
+            padding: 10px; /* เว้นระยะจากขอบทุกด้านเข้าไปข้างใน 10px */
+            margin: auto; /* จัดให้อยู่ตรงกลางหน้าจอ */
+            }
+
+        p {
+            
+            padding: 10px; /* เว้นระยะจากขอบทุกด้านเข้าไปข้างใน 10px */
+            margin: auto; /* จัดให้อยู่ตรงกลางหน้าจอ */
+            }
+
         
         .circle-image {
             width: 200px; /* กำหนดความกว้างของภาพ */
